Move tests to root

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "node": ">=0.10.0"
   },
   "scripts": {
-    "test": "node test/test.js"
+    "test": "node test.js"
   },
   "files": [
     "cli.js"
