--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "download": "cli.js"
   },
   "engines": {
-    "node": ">=0.10.0"
+    "node": ">=4"
   },
   "scripts": {
-    "test": "node test.js"
+    "test": "ava"
   },
   "files": [
     "cli.js"
@@ -31,12 +31,14 @@
     "url"
   ],
   "dependencies": {
-    "get-stdin": "^4.0.1",
-    "download": "^3.2.0",
+    "download": "^6.2.1",
     "meow": "^3.3.0"
   },
   "devDependencies": {
-    "ava": "^0.0.4",
-    "concat-stream": "^1.5.0"
+    "ava": "*",
+    "execa": "^0.6.3",
+    "path-exists": "^3.0.0",
+    "rimraf": "^2.6.1",
+    "xo": "*"
   }
 }
