--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "email": "kevinmartensson@gmail.com",
     "url": "github.com/kevva"
   },
+	"type": "module",
   "bin": {
     "download": "cli.js"
   },
   "engines": {
-    "node": ">=4"
+    "node": ">=16.10"
   },
   "scripts": {
     "test": "xo && ava"
@@ -31,14 +32,14 @@
     "url"
   ],
   "dependencies": {
-    "download": "^6.2.1",
-    "meow": "^3.3.0"
+    "download": "^8.0.0",
+    "meow": "^12.1.1"
   },
   "devDependencies": {
     "ava": "*",
-    "execa": "^0.7.0",
-    "path-exists": "^3.0.0",
-    "rimraf": "^2.6.1",
+    "execa": "^8.0.1",
+    "path-exists": "^5.0.0",
+    "rimraf": "^5.0.1",
     "xo": "*"
   }
 }
